--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -37,13 +37,13 @@ html(lang='en')
                 #navbarResponsive.collapse.navbar-collapse
                     ul.navbar-nav.ml-auto.my-2.my-lg-0
                         li.nav-item
-                            a.nav-link.js-scroll-trigger(href='#about') About
+                            a.nav-link.js-scroll-trigger(href='#about') Sobre
                         li.nav-item
-                            a.nav-link.js-scroll-trigger(href='#services') Services
+                            a.nav-link.js-scroll-trigger(href='#services') Serviços
                         li.nav-item
                             a.nav-link.js-scroll-trigger(href='#portfolio') Portfolio
                         li.nav-item
-                            a.nav-link.js-scroll-trigger(href='#contact') Contact
+                            a.nav-link.js-scroll-trigger(href='#contact') Contato
 
         // Masthead
         header.masthead
