--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -50,50 +50,50 @@ html(lang='en')
             .container.h-100
                 .row.h-100.align-items-center.justify-content-center.text-center
                     .col-lg-10.align-self-end
-                        h1.text-uppercase.text-white.font-weight-bold Your Favorite Source of Free Bootstrap Themes
+                        h1.text-uppercase.text-white.font-weight-bold Seja bem-vindo a minha homepage
                         hr.divider.my-4
                     .col-lg-8.align-self-baseline
                         p.text-white-75.font-weight-light.mb-5
-                            | Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!
-                        a.btn.btn-primary.btn-xl.js-scroll-trigger(href='#about') Find Out More
+                            | Engenheiro de computação pela Universidade Federal de Santa Catarina, Pós Graduado em Análise de Dados. Analista na Seção de Administração de Sistemas do Comando Rodoviário da Brigada Militar... 
+                        a.btn.btn-primary.btn-xl.js-scroll-trigger(href='#about') Descubra mais
 
         // About
         section#about.page-section.bg-primary
             .container
                 .row.justify-content-center
                     .col-lg-8.text-center
-                        h2.text-white.mt-0 We've got what you need!
+                        h2.text-white.mt-0 Eu tenho a solução que você Precisa!
                         hr.divider.light.my-4
                         p.text-white-50.mb-4
-                            | Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!
-                        a.btn.btn-light.btn-xl.js-scroll-trigger(href='#services') Get Started!
+                            | Você está procurando um profissional com conhecimento de mercado, experiência na área de QA, desenvolvimento Web e Mobile. Formado na melhor universidade do país? 
+                        a.btn.btn-light.btn-xl.js-scroll-trigger(href='#services') Chega Mais!
 
         // Services
         section#services.page-section
             .container
-                h2.text-center.mt-0 At Your Service
+                h2.text-center.mt-0 Meus Serviços
                 hr.divider.my-4
                 .row
                     .col-lg-3.col-md-6.text-center
                         .mt-5
                             i.fas.fa-4x.fa-gem.text-primary.mb-4
-                            h3.h4.mb-2 Sturdy Themes
-                            p.text-muted.mb-0 Our themes are updated regularly to keep them bug free!
+                            h3.h4.mb-2 Consultoria
+                            p.text-muted.mb-0 Melhore seu negócio para decolar decolar!
                     .col-lg-3.col-md-6.text-center
                         .mt-5
                             i.fas.fa-4x.fa-laptop-code.text-primary.mb-4
-                            h3.h4.mb-2 Up to Date
-                            p.text-muted.mb-0 All dependencies are kept current to keep things fresh.
+                            h3.h4.mb-2 Mídias Sociais
+                            p.text-muted.mb-0 Crie o conteúdo certo para o público certo!
                     .col-lg-3.col-md-6.text-center
                         .mt-5
-                            i.fas.fa-4x.fa-globe.text-primary.mb-4
-                            h3.h4.mb-2 Ready to Publish
-                            p.text-muted.mb-0 You can use this design as is, or you can make changes!
+                            i.fas.fa-4x.fa-code.text-primary.mb-4
+                            h3.h4.mb-2 Soluções Web
+                            p.text-muted.mb-0 Escolha a melhor solução web para o seu negócio!
                     .col-lg-3.col-md-6.text-center
                         .mt-5
                             i.fas.fa-4x.fa-heart.text-primary.mb-4
-                            h3.h4.mb-2 Made with Love
-                            p.text-muted.mb-0 Is it really open source if it's not made with love?
+                            h3.h4.mb-2 Aplicativos Mobile
+                            p.text-muted.mb-0 A facilidade da soução na palma da mão!
 
         // Portfolio
         section#portfolio
@@ -151,18 +151,16 @@ html(lang='en')
         // Call to action
         section.page-section.bg-dark.text-white
             .container.text-center
-                h2.mb-4 Free Download at Start Bootstrap!
-                a.btn.btn-light.btn-xl(href='https://startbootstrap.com/themes/creative/') Download Now!
 
         // Contact
         section#contact.page-section
             .container
                 .row.justify-content-center
                     .col-lg-8.text-center
-                        h2.mt-0 Let's Get In Touch!
+                        h2.mt-0 Vamos Conversar ?!
                         hr.divider.my-4
                         p.text-muted.mb-5
-                            | Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!
+                            | Agora que você ja conhece meu trabalho, que tal fazer o primeiro contato e marcar uma entrevista e um orçamento sem compromisso? Na pior das hipótese você ganha um amigo 😁
                 .row
                     .col-lg-4.ml-auto.text-center.mb-5.mb-lg-0
                         i.fas.fa-phone.fa-3x.mb-3.text-muted
