--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -163,13 +163,14 @@ html(lang='en')
                             | Agora que você ja conhece meu trabalho, que tal fazer o primeiro contato e marcar uma entrevista e um orçamento sem compromisso? Na pior das hipótese você ganha um amigo 😁
                 .row
                     .col-lg-4.ml-auto.text-center.mb-5.mb-lg-0
-                        i.fas.fa-phone.fa-3x.mb-3.text-muted
-                        div +1 (555) 123-4567
+                        i.fas.fab.fa-whatsapp-square.fa-3x.mb-3.text-muted
+                        div 
+                        a.d-block(href='https://web.whatsapp.com/send?phone=5549999191709&text=Olá,%20gostaria%20de%20um%20orçamento')
                     .col-lg-4.mr-auto.text-center
                         i.fas.fa-envelope.fa-3x.mb-3.text-muted
 
                         // Make sure to change the email address in BOTH the anchor text and the link target below!
-                        a.d-block(href='mailto:contact@yourwebsite.com') contact@yourwebsite.com
+                        a.d-block(href='mailto:victor.costa.melo@hotmail.com') victor.costa.melo@hotmail.com
 
         // Footer
         footer.bg-light.py-5
