--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -165,7 +165,7 @@ html(lang='en')
                     .col-lg-4.ml-auto.text-center.mb-5.mb-lg-0
                         i.fas.fab.fa-whatsapp-square.fa-3x.mb-3.text-muted
                         div 
-                        a.d-block(href='https://web.whatsapp.com/send?phone=5549999191709&text=Olá,%20gostaria%20de%20um%20orçamento')
+                        a.d-block(href='https://web.whatsapp.com/send?phone=5549999191709&text=Olá,%20gostaria%20de%20um%20orçamento') click para dizer: - Ola!
                     .col-lg-4.mr-auto.text-center
                         i.fas.fa-envelope.fa-3x.mb-3.text-muted
 
