erro de digitação

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -93,7 +93,7 @@ html(lang='en')
                         .mt-5
                             i.fas.fa-4x.fa-heart.text-primary.mb-4
                             h3.h4.mb-2 Aplicativos Mobile
-                            p.text-muted.mb-0 A facilidade da soução na palma da mão!
+                            p.text-muted.mb-0 A facilidade da solução na palma da mão!
 
         // Portfolio
         section#portfolio
