--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -160,7 +160,7 @@ html(lang='en')
                         h2.mt-0 Vamos Conversar ?!
                         hr.divider.my-4
                         p.text-muted.mb-5
-                            | Agora que você ja conhece meu trabalho, que tal fazer o primeiro contato e marcar uma entrevista e um orçamento sem compromisso? Na pior das hipótese você ganha um amigo 😁
+                            | Agora que você ja conhece meu trabalho, que tal fazer o primeiro contato e marcar uma entrevista e um orçamento sem compromisso? Na pior das hipóteses, você ganha um amigo 😁
                 .row
                     .col-lg-4.ml-auto.text-center.mb-5.mb-lg-0
                         i.fas.fab.fa-whatsapp-square.fa-3x.mb-3.text-muted
