--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -78,7 +78,7 @@ html(lang='en')
                         .mt-5
                             i.fas.fa-4x.fa-gem.text-primary.mb-4
                             h3.h4.mb-2 Consultoria
-                            p.text-muted.mb-0 Melhore seu negócio para decolar decolar!
+                            p.text-muted.mb-0 Melhore seu negócio para decolar!
                     .col-lg-3.col-md-6.text-center
                         .mt-5
                             i.fas.fa-4x.fa-laptop-code.text-primary.mb-4
